custom email now functional

--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ input {
   background-color: #FFFF99;
 }
 
+.jsonGen {
+  text-align: left;
+  margin-left: 30%;
+}
+
 .button {
-  border-color: solid #B22222;
+  background: #FFFF99;
+  border: solid #B22222;
+  padding: 1%;
+  margin: 1%;
+  margin-bottom: 0;
+  display: inline-block;
 }
